--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   </footer>
 
   <script>
-    const sheetURL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRIWSv7y9JLfmtj6t7w7O0hfZHz408lG4uzLetguIdsBkFuXKWLxWpeT73SkmD-0twYSwpEnaHuFwkz/pub?gid=840630130&single=true&output=csv';
+    const sheetURL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQyOqn4w0KNNgwXjXBam72jKvAmFwr3RUQEHjYEFhUq8gTwZqwuNSStbT-4SELNDNoT7taAgIXC66E2/pub?gid=0&single=true&output=csv';
 
     let allData = [];
 
