--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Reform UK Exposed Tweets by Area</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -65,11 +66,6 @@
       text-decoration: none;
     }
 
-    .logo {
-      max-width: 100px;
-      margin-bottom: 1rem;
-    }
-
     footer {
       text-align: center;
       color: #888;
@@ -113,26 +109,24 @@
 
   <script>
     const sheetURL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQyOqn4w0KNNgwXjXBam72jKvAmFwr3RUQEHjYEFhUq8gTwZqwuNSStbT-4SELNDNoT7taAgIXC66E2/pub?gid=0&single=true&output=csv';
-
     let allData = [];
 
     async function loadCSV(url) {
       const res = await fetch(url);
       const text = await res.text();
-      const rows = text.split('\n').map(row => row.split(','));
 
-      const headers = rows[0].map(h => h.replace(/^\uFEFF/, '').trim().toLowerCase());
-      const areaIdx = headers.findIndex(h => h.includes("area"));
-      const tweetIdx = headers.findIndex(h => h.includes("tweet"));
-      const urlIdx = headers.findIndex(h => h.includes("url"));
+      const parsed = Papa.parse(text, {
+        header: true,
+        skipEmptyLines: true
+      });
 
-      const data = rows.slice(1).map(r => ({
-        area: r[areaIdx]?.trim(),
-        tweet: r[tweetIdx]?.trim(),
-        url: r[urlIdx]?.trim()
+      const cleaned = parsed.data.map(row => ({
+        area: row["Area"]?.trim(),
+        tweet: row["Tweet"]?.trim(),
+        url: row["URL"]?.trim()
       })).filter(d => d.area && d.tweet);
 
-      return data;
+      return cleaned;
     }
 
     function populateDropdown(id, items) {
@@ -148,7 +142,6 @@
     function applyFilters() {
       const area = document.getElementById('areaSelect').value;
       const searchTerm = document.getElementById('searchInput').value.toLowerCase();
-
       const tweetsDiv = document.getElementById('tweets');
       tweetsDiv.innerHTML = '';
 
@@ -176,9 +169,7 @@
 
     async function init() {
       allData = await loadCSV(sheetURL);
-
-      // Clean up area values and remove blanks
-      const uniqueAreas = [...new Set(allData.map(d => d.area.trim()).filter(a => a && a !== 'undefined' && a !== 'null'))];
+      const uniqueAreas = [...new Set(allData.map(d => d.area).filter(Boolean))];
       populateDropdown('areaSelect', uniqueAreas);
 
       document.getElementById('areaSelect').addEventListener('change', applyFilters);
