--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <title>Reform UK Exposed Tweets by Area</title>
+  <p style="margin-top: 0.5rem; font-size: 1rem; max-width: 600px; margin-left: auto; margin-right: auto;">
+    This site shows tweets from the <strong>Reform UK Exposed</strong> Twitter account, organised by geography. 
+    <br>
+    Follow the original account <a href="https://twitter.com/ReformExposed" target="_blank" style="color: white; text-decoration: underline;">here</a>.
+  </p>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <style>
