--- a/index.html
+++ b/index.html
@@ -16,14 +16,34 @@
 
     header {
       background: #00aeef;
-      padding: 1.5rem;
+      padding: 2rem 1rem 1rem;
       text-align: center;
       color: white;
+      position: relative;
     }
 
     header h1 {
       margin: 0;
-      font-size: 2rem;
+      font-size: 2.5rem;
+    }
+
+    .subtext {
+      margin-top: 0.5rem;
+      font-size: 1rem;
+      color: white;
+    }
+
+    .subtext a {
+      color: white;
+      text-decoration: underline;
+    }
+
+    .hero-image {
+      width: 100%;
+      max-height: 300px;
+      object-fit: cover;
+      margin-top: 1rem;
+      border-bottom: 4px solid #003b5c;
     }
 
     .container {
@@ -76,7 +96,7 @@
 
     @media (max-width: 700px) {
       header h1 {
-        font-size: 1.5rem;
+        font-size: 2rem;
       }
     }
   </style>
@@ -85,14 +105,14 @@
 
   <header>
     <h1>Reform UK Exposed Tweets</h1>
+    <div class="subtext">
+      This is tweets from the <strong>Reform UK Exposed</strong> Twitter account, organised by geography.
+      <br />
+      Follow the original account <a href="https://twitter.com/ReformExposed" target="_blank">here</a>.
+    </div>
+    <img class="hero-image" src="https://images.app.goo.gl/RQEF4rmaYZ9ZcFvF8" alt="Satirical image of Nigel Farage crying">
+    <!-- Replace with your preferred image URL or local image -->
   </header>
-
-  <div style="text-align: center; padding: 1rem 1rem 0.5rem; font-size: 1rem; color: black;">
-    This is tweets from the <strong>Reform UK Exposed</strong> Twitter account, organised by geography. 
-    <br />
-    Follow the original account 
-    <a href="https://twitter.com/ReformExposed" target="_blank" style="color: black; text-decoration: underline;">here</a>.
-  </div>
 
   <div class="container">
     <div class="filters">
