--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <header>
     <h1>Reform UK Exposed Tweets</h1>
     <div class="subtext">
-      This is tweets from the <strong>Reform UK Exposed</strong> Twitter account, organised by geography.
+      Are you a local campaigner looking for information about your local Reform candidates? These are tweets from the brilliant <strong>Reform UK Exposed</strong> Twitter account, organised by geography.
       <br />
       Follow the original account <a href="https://twitter.com/ReformExposed" target="_blank">here</a>.
     </div>
