--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Reform UK Exposed Tweets by Area</title>
+  <title>Reform UK Exposed Tweets by Area & Person</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <style>
@@ -13,7 +13,6 @@
       background: #f5f5f5;
       color: #003b5c;
     }
-
     header {
       background: #00aeef;
       padding: 2rem 1rem 1rem;
@@ -21,23 +20,19 @@
       color: white;
       position: relative;
     }
-
     header h1 {
       margin: 0;
       font-size: 2.5rem;
     }
-
     .subtext {
       margin-top: 0.5rem;
       font-size: 1rem;
       color: white;
     }
-
     .subtext a {
       color: white;
       text-decoration: underline;
     }
-
     .hero-image {
       width: 100%;
       max-height: 300px;
@@ -45,23 +40,19 @@
       margin-top: 1rem;
       border-bottom: 4px solid #003b5c;
     }
-
     .container {
       max-width: 900px;
       margin: 2rem auto;
       padding: 0 1rem;
     }
-
     .filters {
       margin-bottom: 1.5rem;
     }
-
     label {
       font-weight: bold;
       display: block;
       margin-bottom: 0.5rem;
     }
-
     select, input[type="text"] {
       width: 100%;
       padding: 0.75rem;
@@ -69,7 +60,6 @@
       border-radius: 4px;
       font-size: 1rem;
     }
-
     .tweet {
       background: white;
       border-radius: 8px;
@@ -78,14 +68,12 @@
       margin-bottom: 1rem;
       line-height: 1.5;
     }
-
     .tweet a {
       display: inline-block;
       margin-top: 0.5rem;
       color: #00aeef;
       text-decoration: none;
     }
-
     footer {
       text-align: center;
       color: #888;
@@ -93,7 +81,6 @@
       margin-top: 3rem;
       padding-bottom: 2rem;
     }
-
     @media (max-width: 700px) {
       header h1 {
         font-size: 2rem;
@@ -106,12 +93,11 @@
   <header>
     <h1>Reform UK Exposed Tweets</h1>
     <div class="subtext">
-      Are you a local campaigner looking for information about your local Reform candidates? These are tweets from the brilliant <strong>Reform UK Exposed</strong> Twitter account, organised by geography.
+      Are you a local campaigner looking for information about your local Reform candidates? These are tweets from the brilliant <strong>Reform UK Exposed</strong> Twitter account, organised by geography and candidate.
       <br />
       Follow the original account <a href="https://twitter.com/ReformExposed" target="_blank">here</a>.
     </div>
     <img class="hero-image" src="https://i2-prod.mirror.co.uk/incoming/article5660503.ece/ALTERNATES/s1200/Election.jpg" alt="Satirical image of Nigel Farage crying">
-    <!-- Replace with your preferred image URL or local image -->
   </header>
 
   <div class="container">
@@ -119,6 +105,11 @@
       <label for="areaSelect">Filter by Area:</label>
       <select id="areaSelect">
         <option value="">All Areas</option>
+      </select>
+
+      <label for="personSelect" style="margin-top:1rem;">Filter by Person:</label>
+      <select id="personSelect">
+        <option value="">All People</option>
       </select>
     </div>
 
@@ -148,9 +139,10 @@
       });
 
       const cleaned = parsed.data.map(row => ({
-        area: row["Area"]?.trim(),
-        tweet: row["Tweet"]?.trim(),
-        url: row["URL"]?.trim()
+        area:   row["Area"]?.trim(),
+        person: row["Person"]?.trim(),   // ← new Person field
+        tweet:  row["Tweet"]?.trim(),
+        url:    row["URL"]?.trim()
       })).filter(d => d.area && d.tweet);
 
       return cleaned;
@@ -167,15 +159,17 @@
     }
 
     function applyFilters() {
-      const area = document.getElementById('areaSelect').value;
+      const area       = document.getElementById('areaSelect').value;
+      const person     = document.getElementById('personSelect').value;
       const searchTerm = document.getElementById('searchInput').value.toLowerCase();
-      const tweetsDiv = document.getElementById('tweets');
+      const tweetsDiv  = document.getElementById('tweets');
       tweetsDiv.innerHTML = '';
 
       const filtered = allData.filter(d => {
-        const matchesArea = area === '' || d.area === area;
-        const matchesSearch = searchTerm === '' || d.tweet.toLowerCase().includes(searchTerm);
-        return matchesArea && matchesSearch;
+        const matchesArea   = !area   || d.area   === area;
+        const matchesPerson = !person || d.person === person;
+        const matchesSearch = !searchTerm || d.tweet.toLowerCase().includes(searchTerm);
+        return matchesArea && matchesPerson && matchesSearch;
       });
 
       if (filtered.length === 0) {
@@ -187,6 +181,7 @@
         const div = document.createElement("div");
         div.className = "tweet";
         div.innerHTML = `
+          <strong>${d.person}</strong><br>
           ${d.tweet}
           ${d.url ? `<br><a href="${d.url}" target="_blank">View on Twitter</a>` : ''}
         `;
@@ -196,10 +191,15 @@
 
     async function init() {
       allData = await loadCSV(sheetURL);
-      const uniqueAreas = [...new Set(allData.map(d => d.area).filter(Boolean))];
+
+      const uniqueAreas   = [...new Set(allData.map(d => d.area))].filter(Boolean);
+      const uniquePeople  = [...new Set(allData.map(d => d.person))].filter(Boolean);
+
       populateDropdown('areaSelect', uniqueAreas);
+      populateDropdown('personSelect', uniquePeople);
 
       document.getElementById('areaSelect').addEventListener('change', applyFilters);
+      document.getElementById('personSelect').addEventListener('change', applyFilters);
       document.getElementById('searchInput').addEventListener('input', applyFilters);
 
       applyFilters(); // initial render
